    - Bugs fixed
        - Fixed issue in DomRepresentation with createTransformer()
          method. Fix contributed by Remi Dewitte. 
        - Validator#validate() method was protected instead of public.
          Reported by Ben R. Vesco.
        - Fixed issue in Validator causing an error when a non 
          required attribute is not found. 
          Reported by Laurent Rustuel.
        - Fixed NPE when parsing DATe header in the gwt edition.
    - Misc

- 2.0 Milestone 6 (2009-11-20)
    - API changes
        - Renamed ChallengeScheme#HTTP_MS_SHAREDKEY into 
          HTTP_AZURE_SHAREDKEY and HTTP_MS_SHAREDKEY_LITE into 
          HTTP_AZURE_SHAREDKEY_LITE.
        - DataServices.Session#getMetadata() now returns on Object 
          to prevent link to internal class.
        - Upgraded the "org.restlet.ext.httpclient" extension to
          leverage Apache HTTP Client 4.0. WARNING: some parameters 
          were renamed due to API changes.
        - Refactored for simplification the security API introduced 
          in previous Restlet 2.0 milestones. 
           - The Organization class was removed and its "rootGroups" 
             and "users" properties were moved to MemoryRealm.
           - The Permission class was removed as it isn't necessarily
             the best way to enforce fine grained authorization. 
           - The RealmService class was removed and the "realms" 
             property moved to Component.
           - The ClientInfo#subject property was replaced by 
             "user : User", "roles : List<Role>" and "principals" to 
             remove the JAAS dependency.
           - A new JAAS extension was added, where the JaasVerifier, 
             DefaultCallbackHandler, UserPrincipal and RolePrincipal
             classes where moved.
           - Verifier now uses ClientInfo as parameter instead of
             Subject.
           - Added a "name" property to Realm and a findRealm(name)
             to Component.