@@ -36,101 +36,6 @@ package org.restlet.engine.http;
  * @author Jerome Louvel
  */
 public final class HttpConstants {
-    // ---------------------
-    // --- Status codes ---
-    // ---------------------
-
-    public static final int STATUS_INFO_CONTINUE = 100;
-
-    public static final int STATUS_INFO_SWITCHING_PROTOCOL = 101;
-
-    public static final int STATUS_INFO_PROCESSING = 102;
-
-    public static final int STATUS_SUCCESS_OK = 200;
-
-    public static final int STATUS_SUCCESS_CREATED = 201;
-
-    public static final int STATUS_SUCCESS_ACCEPTED = 202;
-
-    public static final int STATUS_SUCCESS_NON_AUTHORITATIVE = 203;
-
-    public static final int STATUS_SUCCESS_NO_CONTENT = 204;
-
-    public static final int STATUS_SUCCESS_RESET_CONTENT = 205;
-
-    public static final int STATUS_SUCCESS_PARTIAL_CONTENT = 206;
-
-    public static final int STATUS_SUCCESS_MULTI_STATUS = 207;
-
-    public static final int STATUS_REDIRECTION_MULTIPLE_CHOICES = 300;
-
-    public static final int STATUS_REDIRECTION_MOVED_PERMANENTLY = 301;
-
-    public static final int STATUS_REDIRECTION_FOUND = 302;
-
-    public static final int STATUS_REDIRECTION_SEE_OTHER = 303;
-
-    public static final int STATUS_REDIRECTION_NOT_MODIFIED = 304;
-
-    public static final int STATUS_REDIRECTION_USE_PROXY = 305;
-
-    public static final int STATUS_REDIRECTION_MOVED_TEMPORARILY = 307;
-
-    public static final int STATUS_CLIENT_ERROR_BAD_REQUEST = 400;
-
-    public static final int STATUS_CLIENT_ERROR_UNAUTHORIZED = 401;
-
-    public static final int STATUS_CLIENT_ERROR_PAYMENT_REQUIRED = 402;
-
-    public static final int STATUS_CLIENT_ERROR_FORBIDDEN = 403;
-
-    public static final int STATUS_CLIENT_ERROR_NOT_FOUND = 404;
-
-    public static final int STATUS_CLIENT_ERROR_METHOD_NOT_ALLOWED = 405;
-
-    public static final int STATUS_CLIENT_ERROR_NOT_ACCEPTABLE = 406;
-
-    public static final int STATUS_CLIENT_ERROR_PROXY_AUTHENTIFICATION_REQUIRED = 407;
-
-    public static final int STATUS_CLIENT_ERROR_REQUEST_TIMEOUT = 408;
-
-    public static final int STATUS_CLIENT_ERROR_CONFLICT = 409;
-
-    public static final int STATUS_CLIENT_ERROR_GONE = 410;
-
-    public static final int STATUS_CLIENT_ERROR_LENGTH_REQUIRED = 411;
-
-    public static final int STATUS_CLIENT_ERROR_PRECONDITION_FAILED = 412;
-
-    public static final int STATUS_CLIENT_ERROR_REQUEST_ENTITY_TOO_LARGE = 413;
-
-    public static final int STATUS_CLIENT_ERROR_REQUEST_URI_TOO_LONG = 414;
-
-    public static final int STATUS_CLIENT_ERROR_UNSUPPORTED_MEDIA_TYPE = 415;
-
-    public static final int STATUS_CLIENT_ERROR_REQUESTED_RANGE_NOT_SATISFIABLE = 416;
-
-    public static final int STATUS_CLIENT_ERROR_EXPECTATION_FAILED = 417;
-
-    public static final int STATUS_CLIENT_ERROR_UNPROCESSABLE_ENTITY = 422;
-
-    public static final int STATUS_CLIENT_ERROR_LOCKED = 423;
-
-    public static final int STATUS_CLIENT_ERROR_FAILED_DEPENDENCY = 424;
-
-    public static final int STATUS_SERVER_ERROR_INTERNAL = 500;
-
-    public static final int STATUS_SERVER_ERROR_NOT_IMPLEMENTED = 501;
-
-    public static final int STATUS_SERVER_ERROR_BAD_GATEWAY = 502;
-
-    public static final int STATUS_SERVER_ERROR_SERVICE_UNAVAILABLE = 503;
-
-    public static final int STATUS_SERVER_ERROR_GATEWAY_TIMEOUT = 504;
-
-    public static final int STATUS_SERVER_ERROR_HTTP_VERSION_NOT_SUPPORTED = 505;
-
-    public static final int STATUS_SERVER_ERROR_INSUFFICIENT_STORAGE = 507;
 
     // ------------------------
     // --- Cache directives ---
