@@ -834,6 +834,13 @@ public abstract class ServerResource extends UniformResource {
 
                 if (Status.CLIENT_ERROR_METHOD_NOT_ALLOWED.equals(getStatus())) {
                     updateAllowedMethods();
+                } else if (Method.GET.equals(getMethod())
+                        && Status.SUCCESS_OK.equals(getStatus())
+                        && (!getResponseEntity().isAvailable())) {
+                    getLogger()
+                            .fine(
+                                    "A response with a 200 (Ok) status should have an entity. Changing the status to 204 (No content).");
+                    setStatus(Status.SUCCESS_NO_CONTENT);
                 }
             } catch (Throwable t) {
                 doCatch(t);
